[package]
name = "tracing-chrome"
version = "0.7.1"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A Layer for tracing-subscriber that outputs Chrome-style traces."
documentation = "https://docs.rs/tracing-chrome"
edition = "2018"
keywords = ["profiling", "tracing", "flamegraph", "subscriber"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thoren-d/tracing-chrome"

exclude = ["/doc"]

[dependencies]
serde_json = "1.0.93"
tracing-core = "0.1.30"
tracing = "0.2.0"
tracing-subscriber = "=0.3.0"


[dev-dependencies]
criterion = "0.4.0"
rayon = "1.6.1"
tracing = "0.1.37"


[[bench]]
name = "overhead"
harness = false

[patch.crates-io]
tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028" }
tracing-core = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028" }